fixing weird box on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -329,11 +329,11 @@ button:focus {
   text-align: right; }
   @media (max-width: 1680px) {
     .banner-content {
-      text-align: right; } }
+      text-align: center; } }
   @media (max-width: 680px) {
     .banner-content {
       padding: 48px 20px;
-      background: #fff;
+      /* background: #fff; */
       margin: 0 15px; } }
   .banner-content .primary-btn {
     background: #e45447;
